No need to download java fx